--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,2 +1,21 @@
 // Tools
 @import 'variables';
+@import 'tools/functions';
+@import 'tools/mixins';
+@import 'lib/helpers';
+
+// Lib
+@import 'lib/normalize';
+@import 'lib/fonts';
+
+// Common
+@import 'common/elements';
+@import 'common/headings';
+@import 'common/navigation';
+@import 'common/buttons';
+
+// Components
+@import 'components/google-maps';
+
+// Views
+@import 'views/home';
