--- a/src/templates/layouts/default.jade
+++ b/src/templates/layouts/default.jade
@@ -14,21 +14,23 @@ html
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', '<INSERT_GA_CODE_GERE>', 'auto');
       ga('send', 'pageview');
+    link(href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css')
     link(rel='stylesheet' href='/styles/main.css')
   body(class="#{title}")
     block content
 
     // build:js /scripts/vendor.js
-
+    script(src='/bower_components/zepto/zepto.min.js')
+    script(src='https://maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js')
     // bower:js
     // endbower
 
     // endbuild
 
-    // build:js /scripts/plugins.js
-    // endbuild
-
     // build:js /scripts/main.js
+    script(src='/scripts/main.js')
+
+    script(src='/scripts/google-maps.js')
     // endbuild
 
 
