--- a/src/templates/layouts/default.jade
+++ b/src/templates/layouts/default.jade
@@ -18,7 +18,7 @@ html
     link(rel='stylesheet' href='/styles/main.css')
   body(class="#{title}")
     block content
-    script(src='https://maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js')
+    script(src='//maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js')
     // build:js /scripts/vendor.js
     // bower:js
     script(src='/bower_components/zepto/zepto.min.js')
