--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -10,7 +10,7 @@ block content
       h2 Nobody can do everything, <br>but everybody can do something.
 
       span.buttons
-        a.btn(href='#hack') The hack
+        a.btn(href='#hack') Want to attend?
         a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a project
 
   main(role="main")
