--- a/src/stylesheets/common/_buttons.scss
+++ b/src/stylesheets/common/_buttons.scss
@@ -66,11 +66,13 @@
   }
 
   @include tablet {
-    padding: 0.5rem 0.4rem !important;
+    padding: 0.5rem 0.7rem !important;
+    font-size: 1.1rem;
 
   }
 
   @include handheld {
     padding: 0.75rem 0.5rem !important;
+    font-size: 1rem;
   }
 }
