--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -18,61 +18,70 @@ block content
       article.motivation__text
         h1.motivation__text__header Hello, good to see you here!
         p.
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-    section#cases.cases
-      header.cases__text
-        h1.cases__text__header Inspirational Cases
+          Currently there are several millions of people that have been forced to flee from their home countries and become refugees. Sweden is one of the countries that take in most refugees per capita, this year 140-150 thousand refugees are expected to arrive in Sweden.
         p.
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-      ul
-        li
-          figure
-            img(src="/images/icons/interpret.svg")
-          span Interpretation
-        li
-          figure
-            img(src="/images/icons/food.svg")
-          span Food
-        li
-          figure
-            img(src="/images/icons/housing.svg")
-          span Housing
-        li
-          figure
-            img(src="/images/icons/wifi.svg")
-          span Wifi
-        li
-          figure
-            img(src="/images/icons/jobs.svg")
-          span Jobs
-        li
-          figure
-            img(src="/images/icons/education.svg")
-          span Education
+          This is a huge increase from previous years, causing major challenges for the organisations trying to help the refugees. Several of these challenges can be solved with IT.
 
-      footer
-        h1 More ideas?
-        p Do you have an idea for another case that we have missed? Please help us out!
+    //- section#cases.cases
+    //-   header.cases__text
+    //-     h1.cases__text__header Inspirational Cases
+    //-     p.
+    //-       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+    //-   ul
+    //-     li
+    //-       figure
+    //-         img(src="/images/icons/interpret.svg")
+    //-       span Interpretation
+    //-     li
+    //-       figure
+    //-         img(src="/images/icons/food.svg")
+    //-       span Food
+    //-     li
+    //-       figure
+    //-         img(src="/images/icons/housing.svg")
+    //-       span Housing
+    //-     li
+    //-       figure
+    //-         img(src="/images/icons/wifi.svg")
+    //-       span Wifi
+    //-     li
+    //-       figure
+    //-         img(src="/images/icons/jobs.svg")
+    //-       span Jobs
+    //-     li
+    //-       figure
+    //-         img(src="/images/icons/education.svg")
+    //-       span Education
 
-        span.buttons
-          a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a case
+    //-   footer
+    //-     h1 More ideas?
+    //-     p Do you have an idea for another case that we have missed? Please <a href="mailto:hello@hackforrefugees.com">help us out!</a>
+
+    //-     span.buttons
+    //-       a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a case
 
     section#hack.hack
       article.hack__text
         h1.hack__text__header The hack
         p.
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          On the 5-6 of December we are organizing Hack for Refugees, where we will gather a large group of programmers that together will try to build as many tools as possible that could be helpful for both the refugees and the volunteers.
+        p.
+          Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
+
+        span.buttons
+          a.btn.btn--outlined(href='/register' target="_blank") RSVP for the hack!
+
         p
           h2.hack__text__header Location
           span
             a(href="https://goo.gl/maps/JLHmvfAhHDE2" target="_blank") Burt - Vallgatan 27, Gothenburg
 
 
-        span.buttons
-          a.btn.btn--outlined(href='/register' target="_blank") RSVP for the hack!
+
+
+
       div(id="google-maps")
 
-    section.sponsors
-    section.speakers
-    section.organisers
+    //- section.sponsors
+    //- section.speakers
+    //- section.organisers
