Changed the motivation text a bit

--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -18,9 +18,12 @@ block content
       article.motivation__text
         h1.motivation__text__header Hello, good to see you here!
         p.
-          Currently there are several millions of people that have been forced to flee from their home countries and become refugees. Sweden is one of the countries that take in most refugees per capita, this year 140-150 thousand refugees are expected to arrive in Sweden.
+          Currently there are several millions of people that have been forced to flee from their home countries and become refugees. Sweden is one of the countries that take in most refugees per capita, this year 140-150 thousand refugees are expected to arrive in Sweden. This is a huge increase from previous years, causing major challenges for the organisations trying to help the refugees. Several of these challenges can be solved with IT.
+
         p.
-          This is a huge increase from previous years, causing major challenges for the organisations trying to help the refugees. Several of these challenges can be solved with IT.
+          On the 5-6 of December we are organizing Hack for Refugees, where we will gather a large group of programmers that together will try to build as many tools as possible that could be helpful for both the refugees and the volunteers.
+        p.
+	  Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
 
     //- section#cases.cases
     //-   header.cases__text
