--- a/src/stylesheets/views/_home.scss
+++ b/src/stylesheets/views/_home.scss
@@ -157,7 +157,7 @@
 
   }
 
-  .motivation {
+  .motivation, .faq {
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -275,6 +275,46 @@
         $function: ease,
         $fill: both
       );
+    }
+  }
+
+  // .faq {
+  //   background-color: $color-white;
+  //   display: flex;
+  //   flex-flow: row wrap;
+  //   align-items: stretch;
+  //   padding: $lineheight*2 10%;
+  //   z-index: 3;
+
+  //   &__text {
+  //     flex: 1;
+  //     &__header {
+  //       color: $color-white;
+  //     }
+
+  //     color: $color-black;
+  //     display: flex;
+  //     flex-flow: column wrap;
+  //   }
+  // }
+
+  .contact {
+    background-color: $color-orange;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: stretch;
+    padding: $lineheight*2 10%;
+    z-index: 3;
+
+    &__text {
+      flex: 1;
+      &__header {
+        color: $color-white;
+      }
+
+      color: $color-white;
+      display: flex;
+      flex-flow: column wrap;
     }
   }
 }
