--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -23,45 +23,15 @@ block content
         p.
           On the 5-6 of December we are organizing Hack for Refugees, where we will gather a large group of programmers that together will try to build as many tools as possible that could be helpful for both the refugees and the volunteers.
         p.
-	  Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
+          Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
 
-    //- section#cases.cases
-    //-   header.cases__text
-    //-     h1.cases__text__header Inspirational Cases
-    //-     p.
-    //-       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-    //-   ul
-    //-     li
-    //-       figure
-    //-         img(src="/images/icons/interpret.svg")
-    //-       span Interpretation
-    //-     li
-    //-       figure
-    //-         img(src="/images/icons/food.svg")
-    //-       span Food
-    //-     li
-    //-       figure
-    //-         img(src="/images/icons/housing.svg")
-    //-       span Housing
-    //-     li
-    //-       figure
-    //-         img(src="/images/icons/wifi.svg")
-    //-       span Wifi
-    //-     li
-    //-       figure
-    //-         img(src="/images/icons/jobs.svg")
-    //-       span Jobs
-    //-     li
-    //-       figure
-    //-         img(src="/images/icons/education.svg")
-    //-       span Education
+    section#cases.cases
+      footer
+        h1 Any ideas?
+        p Do you have an ideas that you think could be solved at the hack? If so, please let us know!
 
-    //-   footer
-    //-     h1 More ideas?
-    //-     p Do you have an idea for another case that we have missed? Please <a href="mailto:hello@hackforrefugees.com">help us out!</a>
-
-    //-     span.buttons
-    //-       a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a case
+        span.buttons
+          a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a case
 
     section#hack.hack
       article.hack__text
@@ -79,12 +49,38 @@ block content
           span
             a(href="https://goo.gl/maps/JLHmvfAhHDE2" target="_blank") Burt - Vallgatan 27, Gothenburg
 
-
-
-
-
       div(id="google-maps")
 
+    section.faq
+      article.faq__text
+        h1.faq__text__header Frequently asked Questions
+        h4.faq__text__header When can we start hacking?
+        p.
+          Whenever you want! If you want to get going right away, just send us a message  and tell us what you want to work on so we can make sure no teams build the same solution. But the actual hack starts at Burt on Saturday the 5th of December at 09:00. You can keep hacking there until 19:00 on Sunday the 6th, when you’ll get to show off what you’ve done!
+
+        h4.faq__text__header Will there be food?
+        p.
+          Hell’s yeah. Breakfast, lunch and dinner both days!
+
+        h4.faq__text__header I don’t know what to hack on!
+        p.
+          Don’t worry! Just bring a towel and have a look at the cases section.
+
+        h4.faq__text__header We want to hack as a team, is that possible?
+
+        p.
+          It is! Either have the teammates enter the same team name when registering, or just show up and sit next to each other on hack day :)
+        h4.faq__text__header Will there be prizes?
+        p.
+          Karma. Loads. And possible something more tangible as well.
     //- section.sponsors
     //- section.speakers
     //- section.organisers
+    section.contact
+      article.contact__text
+        h1.contact__text__header Contact
+        p.
+          This event is all about doing things together, if you have any ideas or would like to help out, we would love hear from you. Just send us an email a
+          #[a(class="color-white" href='mailto:hello@hackforrefugees.com') hello@hackforrefugees.com]
+
+
