--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -42,7 +42,8 @@ block content
           Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
 
         span.buttons
-          a.btn.btn--outlined(href='/register' target="_blank") RSVP for the hack!
+          br
+          a.btn.btn--outlined.btn--orange(href='/register' target="_blank") RSVP for the hack!
 
         p
           h2.hack__text__header Location
@@ -80,7 +81,7 @@ block content
       article.contact__text
         h1.contact__text__header Contact
         p.
-          This event is all about doing things together, if you have any ideas or would like to help out, we would love hear from you. Just send us an email a
+          This event is all about doing things together, if you have any ideas or would like to help out, we would love hear from you. Just send us an email at
           #[a(class="color-white" href='mailto:hello@hackforrefugees.com') hello@hackforrefugees.com]
 
 
