--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -28,7 +28,7 @@ block content
     section#cases.cases
       footer
         h1 Any ideas?
-        p Do you have an ideas that you think could be solved at the hack? If so, please let us know!
+        p Do you have any ideas for challenges you think should be adressed at the hack? If so, please let us know!
 
         span.buttons
           a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a case
@@ -55,23 +55,23 @@ block content
     section.faq
       article.faq__text
         h1.faq__text__header Frequently asked Questions
-        h4.faq__text__header When can we start hacking?
+        h2.faq__text__header When can we start hacking?
         p.
           Whenever you want! If you want to get going right away, just send us a message  and tell us what you want to work on so we can make sure no teams build the same solution. But the actual hack starts at Burt on Saturday the 5th of December at 09:00. You can keep hacking there until 19:00 on Sunday the 6th, when you’ll get to show off what you’ve done!
 
-        h4.faq__text__header Will there be food?
+        h2.faq__text__header Will there be food?
         p.
           Hell’s yeah. Breakfast, lunch and dinner both days!
 
-        h4.faq__text__header I don’t know what to hack on!
+        h2.faq__text__header I don’t know what to hack on!
         p.
           Don’t worry! Just bring a towel and have a look at the cases section.
 
-        h4.faq__text__header We want to hack as a team, is that possible?
+        h2.faq__text__header We want to hack as a team, is that possible?
 
         p.
           It is! Either have the teammates enter the same team name when registering, or just show up and sit next to each other on hack day :)
-        h4.faq__text__header Will there be prizes?
+        h2.faq__text__header Will there be prizes?
         p.
           Karma. Loads. And possible something more tangible as well.
     //- section.sponsors
