--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -28,13 +28,13 @@ block content
         span.buttons
           a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a case
           span.buttons
-          a.btn.btn--outlined(href='/contact' target="_blank") Help out :)
+          a.btn.btn--outlined.btn--white(href='/contact' target="_blank") Help out :)
 
     section#hack.hack
       article.hack__text
         h1.hack__text__header The hack
         p.
-          On the 5-6 of December we are organizing Hack for Refugees, where we will gather a large group of programmers, designers and other tech people. Together we will try to build as many tools as possible that could be helpful for both the refugees and the volunteers. 
+          On the 5-6 of December we are organizing Hack for Refugees, where we will gather a large group of programmers, designers and other tech people. Together we will try to build as many tools as possible that could be helpful for both the refugees and the volunteers.
         p.
           Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
 
