added contact form

--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -23,10 +23,12 @@ block content
     section#cases.cases
       footer
         h1 Any ideas?
-        p Do you have any ideas for challenges you think should be adressed at the hack? If so, please let us know!
+        p Do you have any ideas for challenges you think should be adressed at the hack? Or would you like to help out? If so, please let us know!
 
         span.buttons
           a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a case
+          span.buttons
+          a.btn.btn--outlined(href='/contact' target="_blank") Help out :)
 
     section#hack.hack
       article.hack__text
