--- a/src/templates/layouts/default.jade
+++ b/src/templates/layouts/default.jade
@@ -21,8 +21,7 @@ html
     script(src='//maps.googleapis.com/maps/api/js?key=&sensor=false&extension=.js')
     // build:js /scripts/vendor.js
     // bower:js
-    script(src='/bower_components/zepto/zepto.min.js')
-    script(src='/bower_components/waypoints/lib/noframework.waypoints.min.js')
+    script(src='/bower_components/waypoints/lib/noframework.waypoints.js')
     // endbower
     // endbuild
 
