button late night hackz

--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -11,7 +11,7 @@ block content
 
       span.buttons
         a.btn(href='#hack') Want to attend?
-        a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a project
+        a.btn.btn--outlined.btn--white(href='/suggest' target="_blank") Suggest a project
 
   main(role="main")
     section.motivation
@@ -26,9 +26,9 @@ block content
         p Do you have any ideas for challenges you think should be adressed at the hack? Or would you like to help out? If so, please let us know!
 
         span.buttons
-          a.btn.btn--outlined(href='/suggest' target="_blank") Suggest a case
+          a.btn.btn--outlined.btn--white(href='/suggest' target="_blank") Suggest a case
           span.buttons
-          a.btn.btn--outlined.btn--white(href='/contact' target="_blank") Help out :)
+          a.btn.btn--white(href='/contact' target="_blank") Help out :)
 
     section#hack.hack
       article.hack__text
@@ -40,7 +40,7 @@ block content
 
         span.buttons
           br
-          a.btn.btn--outlined.btn--orange(href='/register' target="_blank") RSVP for the hack!
+          a.btn.btn--orange(href='/register' target="_blank") RSVP for the hack!
 
         p
           h2.hack__text__header Location
