fix ideas section

--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -21,8 +21,15 @@ block content
           Currently there are several millions of people that have been forced to flee from their home countries and become refugees. Sweden is one of the countries that take in most refugees per capita, this year 140-150 thousand refugees are expected to arrive in Sweden. This is a huge increase from previous years, causing major challenges for the organisations trying to help the refugees. Several of these challenges can be solved with IT.
 
     section#cases.cases
+      section.cases
+        article.cases__text
+          h1.cases__text__header Proposed Ideas
+          p.
+            We have a list of proposed ideas that organisations and individuals have handed to us.
+            Check them out #[a(class="color-white" href='https://docs.google.com/document/d/1toLS0xmy4wLRhNSdT47fN1lp6tIaDE_Z1Pz550KirR4/edit' target='_blank') here].
+
       footer
-        h1 Any ideas?
+        h1 More ideas?
         p Do you have any ideas for challenges you think should be adressed at the hack? Or would you like to help out? If so, please let us know!
 
         span.buttons
