--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -27,6 +27,37 @@ block content
           p.
             We have a list of proposed ideas that organisations and individuals have handed to us.
             Check them out #[a(class="color-white" href='https://docs.google.com/document/d/1toLS0xmy4wLRhNSdT47fN1lp6tIaDE_Z1Pz550KirR4/edit' target='_blank') here].
+          ul
+            li
+              figure
+                img(src="/images/icons/interpret.svg")
+              h2 Welcome
+              span  An app for refugees with information, chat, event flow and Q&A. Under development, responsible: Tobias Rosman, Screen Interaction.
+            li
+              figure
+                img(src="/images/icons/interpret.svg")
+              h2 Refugee Phone Support System
+              span A web application to support the inflow and outflow of phones from Refugee Phone. A place where companies and people who donate phones to Refugee Phone can fill out how many phones and SIM-cards they send. Also a place where people who need phones for refugees can “order” phones and fill out what settings the phones need. 
+            li
+              figure
+                img(src="/images/icons/interpret.svg")
+              h2 Blending Matching
+              span A way to match families (Refugee families with swedish families) that wants to do stuff together through a new platform called Blending.
+            li
+              figure
+                img(src="/images/icons/interpret.svg")
+              h2 Reunite
+              span A site to help refugees who accidentally got away from friends or family at any point of their escape find each other again.
+            li
+              figure
+                img(src="/images/icons/interpret.svg")
+              h2 400Contacts Instant messaging
+              span A platform where mentor and adept can communicate through IM.
+            li
+              figure
+                img(src="/images/icons/interpret.svg")
+              h2 Refugee Event
+              span A web application where people who arrange activities for refugees can add their events and where refugees can get information about events.
 
       footer
         h1 More ideas?
@@ -87,5 +118,3 @@ block content
         p.
           This event is all about doing things together, if you have any ideas or would like to help out, we would love hear from you. Just send us an email at
           #[a(class="color-white" href='mailto:hello@hackforrefugees.com') hello@hackforrefugees.com]
-
-
