--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -27,38 +27,38 @@ block content
           p.
             We have a list of proposed ideas that organisations and individuals have handed to us.
             Check them out #[a(class="color-white" href='https://docs.google.com/document/d/1toLS0xmy4wLRhNSdT47fN1lp6tIaDE_Z1Pz550KirR4/edit' target='_blank') here].
-          div(style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between")
-            div(style="width: auto")
+          ul
+            li
               figure
                 img(src="/images/icons/interpret.svg")
               h2 Welcome
-              div(style="width: 200px") An app for refugees with information, chat, event flow and Q&A. Under development, responsible: Tobias Rosman, Screen Interaction.
-            div(style="width: auto")
+              p An app for refugees with information, chat, event flow and Q&A. Under development, responsible: Tobias Rosman, Screen Interaction.
+            li
               figure
                   img(src="/images/icons/interpret.svg")
               h2 Refugee Event
-              div(style="width: 200px") A web application where people who arrange activities for refugees can add their events and where refugees can get information about events.
-            div(style="width: auto")
+              p A web application where people who arrange activities for refugees can add their events and where refugees can get information about events.
+            li
               figure
                 img(src="/images/icons/interpret.svg")
               h2 Blending Matching
-              div(style="width: 200px") A way to match families (Refugee families with swedish families) that wants to do stuff together through a new platform called Blending.
+              p A way to match families (Refugee families with swedish families) that wants to do stuff together through a new platform called Blending.
 
-            div(style="width: auto")
+            li
               figure
                 img(src="/images/icons/interpret.svg")
               h2 Reunite
-              div(style="width: 200px") A site to help refugees who accidentally got away from friends or family at any point of their escape find each other again.
-            div(style="width: auto")
+              p A site to help refugees who accidentally got away from friends or family at any point of their escape find each other again.
+            li
               figure
                 img(src="/images/icons/interpret.svg")
               h2 Refugee Phone Support System
-              div(style="width: 200px") A web application to support the inflow and outflow of phones from Refugee Phone. A place where companies and people who donate phones to Refugee Phone can fill out how many phones and SIM-cards they send. Also a place where people who need phones for refugees can “order” phones and fill out what settings the phones need. 
-            div(style="width: auto")
+              p A web application to support the inflow and outflow of phones from Refugee Phone. A place where companies and people who donate phones to Refugee Phone can fill out how many phones and SIM-cards they send. Also a place where people who need phones for refugees can “order” phones and fill out what settings the phones need.
+            li
               figure
                 img(src="/images/icons/interpret.svg")
               h2 400Contacts Instant messaging
-              div(style="width: 200px") A platform where mentor and adept can communicate through IM.
+              p A platform where mentor and adept can communicate through IM.
 
       footer
         h1 More ideas?
