sdka;da;kdjakljdal;kjd

--- a/src/stylesheets/views/_home.scss
+++ b/src/stylesheets/views/_home.scss
@@ -223,7 +223,7 @@
         flex-direction: column;
         justify-content: center;
         color: white;
-
+        padding: $lineheight*2 2%;
         figure {
           margin-bottom: (1.5882352941rem/8);
           img {
