--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -25,40 +25,41 @@ block content
         article.cases__text
           h1.cases__text__header Proposed Ideas
           p.
-            We have a list of proposed ideas that organisations and individuals have handed to us.
-            Check them out #[a(class="color-white" href='https://docs.google.com/document/d/1toLS0xmy4wLRhNSdT47fN1lp6tIaDE_Z1Pz550KirR4/edit' target='_blank') here].
+            We have a list of proposed ideas that organisations and individuals have handed to us, see some examples below or check them all out #[a(class="color-white" href='https://docs.google.com/document/d/1toLS0xmy4wLRhNSdT47fN1lp6tIaDE_Z1Pz550KirR4/edit' target='_blank') here].
           ul
             li
               figure
-                img(src="/images/icons/interpret.svg")
-              h2 Welcome
-              p An app for refugees with information, chat, event flow and Q&A. Under development, responsible: Tobias Rosman, Screen Interaction.
+                img(src="/images/icons/heart.svg")
+              h2 Reunite
+              p A site dedicated to refugees who accidentally got away from friends or family during their escape, providing them help to find their loved ones again.
             li
               figure
-                  img(src="/images/icons/interpret.svg")
+                img(src="/images/icons/beer.svg")
               h2 Refugee Event
-              p A web application where people who arrange activities for refugees can add their events and where refugees can get information about events.
+              p A web application where people who arrange activities for refugees can add their events, as well as a place where refugees can get information about upcoming events.
             li
               figure
-                img(src="/images/icons/interpret.svg")
+                img(src="/images/icons/smile.svg")
               h2 Blending Matching
-              p A way to match families (Refugee families with swedish families) that wants to do stuff together through a new platform called Blending.
+              p A platform providing possibilities to match families (refugee families with swedish families) that wants to do fun stuff together.
 
             li
               figure
-                img(src="/images/icons/interpret.svg")
-              h2 Reunite
-              p A site to help refugees who accidentally got away from friends or family at any point of their escape find each other again.
+                img(src="/images/icons/phone.svg")
+              h2 Refugee Phones Support System
+              p A web application to support Refugee Phones in their awesome work of delivering phones to the ones who needs it the most. The application could for example support logging of the in- and outflow of phones, donations from companies or individuals, as well as functionality for ordering phones for refugees.
             li
               figure
-                img(src="/images/icons/interpret.svg")
-              h2 Refugee Phone Support System
-              p A web application to support the inflow and outflow of phones from Refugee Phone. A place where companies and people who donate phones to Refugee Phone can fill out how many phones and SIM-cards they send. Also a place where people who need phones for refugees can “order” phones and fill out what settings the phones need.
+                img(src="/images/icons/talk.svg")
+              h2 400contacts Instant Messaging
+              p A platform for connecting refugees with local professionals and let mentors and and adepts communicate easily though instant messaging. This as a way to help refugees with engineering background get their first skilled job in Sweden.
+
             li
               figure
-                img(src="/images/icons/interpret.svg")
-              h2 400Contacts Instant messaging
-              p A platform where mentor and adept can communicate through IM.
+                img(src="/images/icons/hands.svg")
+              h2 Scheduling Volunteers
+              p An app for scheduling volunteers at refugee homes and a place where volunteers can register that they’re willing to help. Security is a recurring problem at refugee homes, so this registration needs to have some kind of strong authentication, preferable bank-id or something similar.
+          
 
       footer
         h1 More ideas?
