--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -29,7 +29,7 @@ block content
           ul
             li
               figure
-                img(src="/images/icons/heart.svg")
+                img.heart(src="/images/icons/heart.svg")
               h2 Reunite
               p A site dedicated to refugees who accidentally got away from friends or family during their escape, providing them help to find their loved ones again.
             li
@@ -59,7 +59,7 @@ block content
                 img(src="/images/icons/hands.svg")
               h2 Scheduling Volunteers
               p An app for scheduling volunteers at refugee homes and a place where volunteers can register that they’re willing to help. Security is a recurring problem at refugee homes, so this registration needs to have some kind of strong authentication, preferable bank-id or something similar.
-          
+
 
       footer
         h1 More ideas?
