--- a/src/stylesheets/views/_home.scss
+++ b/src/stylesheets/views/_home.scss
@@ -215,7 +215,7 @@
       justify-content: center;
       flex-flow: row wrap;
       align-items: flex-start;
-      padding: $lineheight*2 0%;
+      padding: $lineheight*2 0% 0% 0%;
 
       li {
         flex: 1;
@@ -225,10 +225,20 @@
         color: white;
         padding: $lineheight*2 2%;
         figure {
+          padding: 10px;
           margin-bottom: (1.5882352941rem/8);
           img {
-            height: 75px;
+            &.heart {
+              padding-top: 5px;
+            }
+            height: 65px;
           }
+        }
+        h2 {
+           margin-bottom: $lineheight/4;
+        }
+        p {
+          margin-top: 0;
         }
 
       }
