--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -21,49 +21,48 @@ block content
           Currently there are several millions of people that have been forced to flee from their home countries and become refugees. Sweden is one of the countries that take in most refugees per capita, this year 140-150 thousand refugees are expected to arrive in Sweden. This is a huge increase from previous years, causing major challenges for the organisations trying to help the refugees. Several of these challenges can be solved with IT.
 
     section#cases.cases
-      section.cases
-        article.cases__text
-          h1.cases__text__header Proposed Ideas
-          p.
-            We have a list of proposed ideas that organisations and individuals have handed to us, see some examples below or check them all out #[a(class="color-white" href='https://docs.google.com/document/d/1toLS0xmy4wLRhNSdT47fN1lp6tIaDE_Z1Pz550KirR4/edit' target='_blank') here].
-          ul
-            li
-              figure
-                img.heart(src="/images/icons/heart.svg")
-              h2 Reunite
-              p A site dedicated to refugees who accidentally got away from friends or family during their escape, providing them help to find their loved ones again.
-            li
-              figure
-                img(src="/images/icons/beer.svg")
-              h2 Refugee Event
-              p A web application where people who arrange activities for refugees can add their events, as well as a place where refugees can get information about upcoming events.
-            li
-              figure
-                img(src="/images/icons/smile.svg")
-              h2 Blending Matching
-              p A platform providing possibilities to match families (refugee families with swedish families) that wants to do fun stuff together.
+      article.cases__text
+        h1.cases__text__header Proposed Ideas
+        p.
+          We have a list of proposed ideas that organisations and individuals have handed to us, see some examples below or check them all out #[a(class="color-white" href='https://docs.google.com/document/d/1toLS0xmy4wLRhNSdT47fN1lp6tIaDE_Z1Pz550KirR4/edit' target='_blank') here].
+        ul
+          li
+            figure
+              img.heart(src="/images/icons/heart.svg")
+            h2 Reunite
+            p A site dedicated to refugees who accidentally got away from friends or family during their escape, providing them help to find their loved ones again.
+          li
+            figure
+              img(src="/images/icons/beer.svg")
+            h2 Refugee Event
+            p A web application where people who arrange activities for refugees can add their events, as well as a place where refugees can get information about upcoming events.
+          li
+            figure
+              img(src="/images/icons/smile.svg")
+            h2 Blending Matching
+            p A platform providing possibilities to match families (refugee families with swedish families) that wants to do fun stuff together.
 
-            li
-              figure
-                img(src="/images/icons/phone.svg")
-              h2 Refugee Phones Support System
-              p A web application to support Refugee Phones in their awesome work of delivering phones to the ones who needs it the most. The application could for example support logging of the in- and outflow of phones, donations from companies or individuals, as well as functionality for ordering phones for refugees.
-            li
-              figure
-                img(src="/images/icons/talk.svg")
-              h2 400contacts Instant Messaging
-              p A platform for connecting refugees with local professionals and let mentors and and adepts communicate easily though instant messaging. This as a way to help refugees with engineering background get their first skilled job in Sweden.
+          li
+            figure
+              img(src="/images/icons/phone.svg")
+            h2 Refugee Phones Support System
+            p A web application to support Refugee Phones in their awesome work of delivering phones to the ones who needs it the most. The application could for example support logging of the in- and outflow of phones, donations from companies or individuals, as well as functionality for ordering phones for refugees.
+          li
+            figure
+              img(src="/images/icons/talk.svg")
+            h2 400contacts Instant Messaging
+            p A platform for connecting refugees with local professionals and let mentors and and adepts communicate easily though instant messaging. This as a way to help refugees with engineering background get their first skilled job in Sweden.
 
-            li
-              figure
-                img(src="/images/icons/hands.svg")
-              h2 Scheduling Volunteers
-              p An app for scheduling volunteers at refugee homes and a place where volunteers can register that they’re willing to help. Security is a recurring problem at refugee homes, so this registration needs to have some kind of strong authentication, preferable bank-id or something similar.
+          li
+            figure
+              img(src="/images/icons/hands.svg")
+            h2 Scheduling Volunteers
+            p An app for scheduling volunteers at refugee homes and a place where volunteers can register that they’re willing to help. Security is a recurring problem at refugee homes, so this registration needs to have some kind of strong authentication, preferable bank-id or something similar.
 
 
-      footer
-        h1 More ideas?
-        p Do you have any ideas for challenges you think should be adressed at the hack? Or would you like to help out? If so, please let us know!
+      footer.cases__text
+        h1.cases__text__header More ideas?
+        p Do you have any ideas for challenges you think should be addressed at the hack? Or would you like to help out? If so, please let us know!
 
         span.buttons
           a.btn.btn--outlined.btn--white(href='/suggest' target="_blank") Suggest a case
