--- a/src/stylesheets/views/_home.scss
+++ b/src/stylesheets/views/_home.scss
@@ -218,7 +218,8 @@
       align-items: flex-start;
 
       li {
-        flex: 1;
+        flex-basis: auto; /* default value */
+        flex-grow: 1;
         min-width: 345px;
         flex-direction: column;
         justify-content: center;
