fix width bug take 2

--- a/src/stylesheets/views/_home.scss
+++ b/src/stylesheets/views/_home.scss
@@ -211,15 +211,13 @@
 
     ul {
       @include list-reset;
-
       display: flex;
       justify-content: center;
       flex-flow: row wrap;
       align-items: flex-start;
 
       li {
-        flex: 1;
-        min-width: 33%;
+        flex: 1 33%;
         flex-direction: column;
         justify-content: center;
         color: white;
@@ -242,11 +240,11 @@
         }
 
         @include tablet {
-          min-width: 50%;
+          flex: 1 50%;
         }
 
         @include handheld {
-          min-width: 100%;
+          flex: 1 100%;
         }
       }
     }
