fix waiting list

--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -77,13 +77,17 @@ block content
         p.
           Our goal is to increase the awareness of the problems the refugees face and find new ways for people to help.
 
-        p.
-          Oh boy, that was quick, we've already filled all available spots! All registrars
-          from now on will be put on a waiting list, and if a spot is available, we'll let you know.
+        h
+        p
+          b.
+            Oh boy, that was quick!
+          span.
+            We've already filled all available spots! All registrars
+            from now on will be put on a waiting list, and if a spot is available, we'll let you know.
 
         span.buttons
           br
-          a.btn.btn--orange(href='/register' target="_blank") Signup on the Waiting list
+          a.btn.btn--orange(href='/register' target="_blank") Sign up for the waiting list
 
         p
           h2.hack__text__header Location
