--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -121,6 +121,52 @@ block content
     //- section.sponsors
     //- section.speakers
     //- section.organisers
+    section#sponsors.sponsors
+      article.sponsors__text
+        h1.sponsors__text__header Partners
+        ul
+          li
+            figure
+              img(src="/images/sponsors/burt_logo_positive.png")
+          li
+            figure
+              img(src="/images/sponsors/interaktionsbyran-logo.png")
+          li
+            figure
+              img(src="/images/sponsors/logo-safer-society-group-cmyk.png")
+          li
+            figure
+              img(src="/images/sponsors/RecordedFutureBlack.png")
+        ul.three
+          li
+            figure
+              img(src="/images/sponsors/yaki-da.png")
+          li
+            figure
+              img(src="/images/sponsors/Red_Bull.svg")
+          li
+            figure
+              img(src="/images/sponsors/bergstrands_kafferosteri.png")
+          li
+            figure
+              img(src="/images/sponsors/moon_svart.png")
+
+
+          li
+            figure
+              img(src="/images/sponsors/wakal-trans.png")
+          li
+            figure
+              img(src="/images/sponsors/RAW_LOGO-01.png")
+          li
+            figure
+              img(src="/images/sponsors/llamaENDASTlama.png")
+
+          li
+            figure
+              img(src="/images/sponsors/Oatly_logga.png")
+
+
     section.contact
       article.contact__text
         h1.contact__text__header Contact
