--- a/src/stylesheets/views/_home.scss
+++ b/src/stylesheets/views/_home.scss
@@ -259,6 +259,106 @@
     }
   }
 
+
+  .sponsors {
+    background-color: $color-white;
+    color: $color-black;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    padding: $lineheight*4 10%;
+    z-index: 3;
+
+    &__text {
+      &__header {
+        color: $color-black;
+      }
+      color: $color-black;
+      display: flex;
+      flex-flow: column wrap;
+    }
+
+    ul {
+      @include list-reset;
+      display: flex;
+      justify-content: center;
+      flex-flow: row wrap;
+      align-items: center;
+
+      li {
+        flex: 1 50%;
+        flex-direction: column;
+        justify-content: center;
+        color: white;
+        padding: $lineheight*2 10%;
+        figure {
+          padding: 10px;
+          margin-bottom: (1.5882352941rem/8);
+          img {
+            max-width: 400px;
+            width: 100%;
+          }
+        }
+        h2 {
+           margin-bottom: $lineheight/4;
+        }
+        p {
+          margin-top: 0;
+        }
+
+        @include desktop {
+          flex: 1 50%;
+        }
+
+        @include laptop {
+          flex: 1 100%;
+        }
+
+        @include tablet {
+          flex: 1 100%;
+        }
+
+
+      }
+    }
+
+    ul.three {
+      li{
+        flex: 0 33.33%;
+        padding: $lineheight*2 7%;
+
+        img {
+            max-width: 150px;
+            width: 100%;
+          }
+
+
+
+        @include tablet {
+          flex: 1 100%;
+        }
+
+        @include handheld {
+          img {
+            max-width: 100px;
+            width: 100%;
+          }
+          padding: $lineheight 2%;
+          flex: 1 50%;
+        }
+      }
+    }
+
+
+    &.seen > * {
+      @include fadeInUp(
+        $duration: 750ms,
+        $function: ease,
+        $fill: both
+      );
+    }
+  }
+
   .hack {
     background-color: $color-blue;
     display: flex;
