Added links to all logos and changed the Q&A to match the schedule

--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -101,7 +101,7 @@ block content
         h1.faq__text__header Frequently asked Questions
         h2.faq__text__header When can we start hacking?
         p.
-          Whenever you want! If you want to get going right away, just send us a message  and tell us what you want to work on so we can make sure no teams build the same solution. But the actual hack starts at Burt on Saturday the 5th of December at 09:00. You can keep hacking there until 19:00 on Sunday the 6th, when you’ll get to show off what you’ve done!
+          Whenever you want! If you want to get going right away, just send us a message  and tell us what you want to work on so we can make sure no teams build the same solution. But the actual hack starts at Burt on Saturday the 5th of December at 09:00. You can keep hacking there until 17:50 on Sunday the 6th, when you’ll get to show off what you’ve done!
 
         h2.faq__text__header Will there be food?
         p.
@@ -127,44 +127,56 @@ block content
         ul
           li
             figure
-              img(src="/images/sponsors/burt_logo_positive.png")
+              a(href="http://burt.io/")
+                img(src="/images/sponsors/burt_logo_positive.png")
           li
             figure
-              img(src="/images/sponsors/interaktionsbyran-logo.png")
+              a(href="http://www.interaktionsbyran.se/")
+                img(src="/images/sponsors/interaktionsbyran-logo.png")
           li
             figure
-              img(src="/images/sponsors/logo-safer-society-group-cmyk.png")
+              a(href="http://www.safersociety.com/")
+                img(src="/images/sponsors/logo-safer-society-group-cmyk.png")
           li
             figure
-              img(src="/images/sponsors/RecordedFutureBlack.png")
+              a(href="https://www.recordedfuture.com/")
+                img(src="/images/sponsors/RecordedFutureBlack.png")
         ul.three
           li
             figure
-              img(src="/images/sponsors/yaki-da.png")
+              a(href="http://www.yaki-da.se/")
+                img(src="/images/sponsors/yaki-da.png")
           li
             figure
-              img(src="/images/sponsors/Red_Bull.svg")
+              a(href="http://www.redbull.com/")
+                img(src="/images/sponsors/Red_Bull.svg")
           li
             figure
-              img(src="/images/sponsors/bergstrands_kafferosteri.png")
+              a(href="http://www.bergstrands.se/")
+                img(src="/images/sponsors/bergstrands_kafferosteri.png")
           li
             figure
-              img(src="/images/sponsors/moon_svart.png")
+              a(href="http://www.mooncoffee.se/")
+                img(src="/images/sponsors/moon_svart.png")
 
 
           li
             figure
-              img(src="/images/sponsors/wakal-trans.png")
+              a(href="http://www.wakalstreetfood.se/")
+                img(src="/images/sponsors/wakal-trans.png")
           li
             figure
-              img(src="/images/sponsors/RAW_LOGO-01.png")
+              a(href="http://falcon.se/")
+                img(src="/images/sponsors/RAW_LOGO-01.png")
           li
             figure
-              img(src="/images/sponsors/llamaENDASTlama.png")
+              a(href="http://www.llamalloyd.se/")
+                img(src="/images/sponsors/llamaENDASTlama.png")
 
           li
             figure
-              img(src="/images/sponsors/Oatly_logga.png")
+              a(href="http://www.oatly.com/")
+                img(src="/images/sponsors/Oatly_logga.png")
 
 
     section.contact
