--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -101,11 +101,11 @@ block content
         h1.faq__text__header Frequently asked Questions
         h2.faq__text__header When can we start hacking?
         p.
-          Whenever you want! If you want to get going right away, just send us a message  and tell us what you want to work on so we can make sure no teams build the same solution. But the actual hack starts at Burt on Saturday the 5th of December at 09:00. You can keep hacking there until 17:50 on Sunday the 6th, when you’ll get to show off what you’ve done!
+          Whenever you want! If you want to get going right away, just send us a message  and tell us what you want to work on so we can make sure no teams build the same solution. But the actual hack starts at Burt on Saturday the 5th of December at 09:00. You can keep hacking there until 16:50 on Sunday the 6th, when you’ll get to show off what you’ve done!
 
         h2.faq__text__header Will there be food?
         p.
-          Hell’s yeah. Breakfast, lunch and dinner both days!
+          Hell’s yeah. Breakfast, lunch and dinner on Saturday, and breakfast and lunch on Sunday!
 
         h2.faq__text__header I don’t know what to hack on!
         p.
@@ -117,7 +117,7 @@ block content
           It is! Either have the teammates enter the same team name when registering, or just show up and sit next to each other on hack day :)
         h2.faq__text__header Will there be prizes?
         p.
-          Karma. Loads. And possible something more tangible as well.
+          Karma. Loads. And possibly something more tangible as well.
     //- section.sponsors
     //- section.speakers
     //- section.organisers
